# speexdsp

./: CMakeLists.txt
libspeexdsp/: jitter.c
